# user-service/presentation/web-schemas/auth_schemas.go
@@ -1,5 +1,9 @@
 package web_schemas
 
+type RefreshTokenRequest struct {
+	RefreshToken string `json:"refresh_token"`
+}
+
 type LoginRequest struct {
 	Username string `json:"username"`
 	Password string `json:"password"`
